Fix overlapping position: fixed elements in certain views

--- a/inspire.css
+++ b/inspire.css
@@ -41,6 +41,7 @@ body {
 @media screen {
 	body:not(.show-all) .slide:not(.previous):not(:target):not(.next) {
 		display: none !important;
+		transform: scale(1); /* for any internal position: fixed elements */
 	}
 }
 
@@ -176,11 +177,12 @@ body.show-all .slide {
 	}
 
 	.slide.slide {
+		position: relative;
+		transform: scale(1); /* for any internal position: fixed elements */
 		width: 100vw;
 		height: 100vh;
 		box-sizing: border-box;
 		overflow: hidden;
-		position: relative;
 		opacity: 1;
 		visibility: visible;
 	}
